wb-nm-helper (1.12.1) stable; urgency=medium

  * ifdown removed interfaces

 -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Wed, 28 Dec 2022 14:30:43 +0400

wb-nm-helper (1.12.0) stable; urgency=medium

  * Add arguments to wb-nm-helper
  * Increase default Wi-Fi scan timeout
  * Add nm_helper tests

 -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Mon, 26 Dec 2022 10:27:43 +0400

wb-nm-helper (1.11.2) stable; urgency=medium

  * Don't force SIM slot change if it's already set to proper value

 -- Aleksandr Kazadaev <aleksandr.kazadaev@wirenboard.com>  Fri, 23 Dec 2022 13:18:42 +0300

wb-nm-helper (1.11.1) stable; urgency=medium

  * Add route metric editing to IPv4 DHCP and shared connections

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Thu, 22 Dec 2022 11:55:42 +0500

wb-nm-helper (1.11.0) stable; urgency=medium

  * Hide connections configured with user.data.read-only=true on UI

 -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Mon, 19 Dec 2022 21:14:00 +0400

wb-nm-helper (1.10.5) stable; urgency=medium

  * Fix parsing of /etc/network/interfaces without new line at the end of a file

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Mon, 19 Dec 2022 17:51:10 +0500

wb-nm-helper (1.10.4) stable; urgency=medium

  * Disable WPS for Wi-Fi access points.
    It can cause connection errors with MacOS and Linux

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 14 Dec 2022 11:24:15 +0500

wb-nm-helper (1.10.3) stable; urgency=medium

  * Fix Wi-Fi access point's subnet address editing

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Tue, 06 Dec 2022 18:31:32 +0500

wb-nm-helper (1.10.2) stable; urgency=medium

  * Fix Wi-Fi access point security parameters editing

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Tue, 06 Dec 2022 12:42:58 +0500

wb-nm-helper (1.10.1) stable; urgency=medium

  * Fix editing wlans defined in /etc/network/interfaces