@@ -1,6 +1,7 @@
 wb-nm-helper (1.12.1) stable; urgency=medium
 
   * ifdown removed interfaces
+  * Don't restart NetworkManager if not required
 
  -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Wed, 28 Dec 2022 14:30:43 +0400
 
